--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,5 +1,6 @@
-<% if @user.donor %>
-  <%= @user.bookings%>
+<% if current_user.donor %>
+  <%= current_user.bookings %>
+  <%= current_user.offers %>
 <% else %>
   <%= @user.offers %>
 <% end %>
