--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -16,9 +16,9 @@
   <% if current_user.bookings.any? %>
     <% current_user.bookings.each do |booking| %>
       <% if booking.status == 0 %>
-          <p>Your booking from <%= booking.offer.user.first_name %>is pending</p>
+          <p>Waiting for <%= booking.offer.user.first_name %> to confirm your order</p>
         <% else %>
-          <p>Your booking from <%= booking.offer.user.first_name %> was accepted</p>
+          <p><%= booking.offer.user.first_name %> was accepted your pickup</p>
       <% end %>
     <% end %>
   <% end %>
