Updated seeds and dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -16,9 +16,10 @@
   <% if current_user.bookings.any? %>
     <% current_user.bookings.each do |booking| %>
       <% if booking.status == 0 %>
-          <p>Waiting for <%= booking.offer.user.first_name %> to confirm your order</p>
+          <p>This order is still available to pickup from <%= booking.offer.user.first_name %></p>
         <% else %>
-          <p><%= booking.offer.user.first_name %> was accepted your pickup</p>
+          <p><%= booking.offer.user.first_name %></p>
+          <p><%= booking.offer.user.address %></p>
       <% end %>
     <% end %>
   <% end %>
