--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,21 +1,20 @@
-
-<div class="container">
-
-<h3>Active Offers</h3>
-<% @offers.each do |offer| %>
-  <div>
-    <%= offer.user.first_name %>
-    <%= offer.user.address %>
-    <%= offer.user.photo_url %>
-  </div>
-  <div>
-  <%= offer.timeslot %>
-  <%= offer.plastic_bottles %>
-  <%= offer.glass_bottles %>
-  <%= offer.crates %>
-  <%= offer.tip %>
-  <%= offer.transportability %>
-  <%= offer.comment %>
-  </div>
+<div class="container mt-5">
+<h3>Here are all active offers</h3>
+  <% @offers.each do |offer| %>
+    <div>
+      <ul>
+        <li>
+          <p> <strong> Donor name: </strong> <%= offer.user.first_name %> </p>
+          <p> <strong> Pickup address: </strong> <%= offer.user.address %> </p>
+          <p> <strong> Pickup time: <%= offer.timeslot %> </strong></p>
+          <p>  <%= link_to "View details", offer_path(offer) %> </p>
+          <br>
+        </li>
+    </div>
+  </ul>
 <% end %>
+
+
+  <button type="button" class="btn btn-success"> <%= link_to "Create a new offer", offer_path(:new) %></button>
+
 </div>
