--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -9,6 +9,9 @@
   <div>
 
     <p> <strong> Pickup address: </strong> <%= @offer.user.address %> </p>
+    <p> <strong> Phone number: </strong> <%= @offer.user.phone_number %> </p>
+    <p> <strong> Pickup time:  </strong><%= @offer.timeslot %></p>
+
   </div>
   <div>
       <p> <strong> Plastic bottles: </strong> <%= @offer.plastic_bottles %> </p>
