offers show for creating bookings

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -16,6 +16,6 @@
   <%= offer.transportability %>
   <%= offer.comment %>
   </div>
+  <div class="btn btn-primary accept" link_to new_offer_booking >Accept</div>
 <% end %>
-  <div class="btn btn-primary"></div>
 </div>
