--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,15 +1,18 @@
 $white: rgba(255,255,255,0.3);
 
-body {
-  background: linear-gradient(45deg, #FC466B, #3F5EFB);
+body{
+  background: linear-gradient(45deg, #df2a4e, #3F5EFB);
   height: 100vh;
   font-family: 'Montserrat', sans-serif;
 }
 
-.form {
+form {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
   background: $white;
   padding: 3em;
-  height: 670px;
+  height: 707px;
   border-radius: 20px;
   border-left: 1px solid $white;
   border-top: 1px solid $white;
@@ -17,33 +20,10 @@ body {
   box-shadow: 20px 20px 40px -6px rgba(0,0,0,0.2);
   text-align: center;
 
-  p {
-    font-weight: 500;
-    color: #fff;
-    opacity: 0.7;
-    font-size: 1.4rem;
-    margin-top: 0;
-    margin-bottom: 60px;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-  }
-
-  a {
-    text-decoration: none;
-    color: #ddd;
-    font-size: 12px;
-
-    &:hover {
-      text-shadow: 2px 2px 6px #00000040;
-    }
-
-    &:active {
-      text-shadow: none;
-    }
-  }
-
-  input {
+  .special {
     background: transparent;
-    width: 200px;
+    width: 100%;
+    height: 60px;
     padding: 1em;
     margin-bottom: 2em;
     border: none;
@@ -57,96 +37,27 @@ body {
     font-weight: 500;
     text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
 
-    &:hover {
-      background: rgba(255,255,255,0.1);
-      box-shadow: 4px 4px 60px 8px rgba(0,0,0,0.2);
-    }
-
-    &[type="email"],
-    &[type="password"] {
-
       &:focus {
         background: rgba(255,255,255,0.1);
         box-shadow: 4px 4px 60px 8px rgba(0,0,0,0.2);
       }
     }
 
-    &.button {
+    label {
+      color: #fff;
+    }
+
+    #button {
       margin-top: 10px;
+      margin-bottom: 60px;
       width: 150px;
       font-size: 1rem;
-
-      &:hover {
-        cursor: pointer;
-      }
-
-      &:active {
-        background: rgba(255,255,255,0.2);
-      }
+      border-radius: 20px;
+      border-left: 1px solid $white;
+      border-top: 1px solid $white;
+      backdrop-filter: blur(10px);
+      color: #fff;
+      box-shadow: 20px 20px 40px -6px rgba(0,0,0,0.2);
     }
-  }
-}
 
-::placeholder {
-  font-family: Montserrat, sans-serif;
-  font-weight: 400;
-  color: #fff;
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
-}
-
-.drop {
-  background: $white;
-  backdrop-filter: blur(10px);
-  border-radius: 10px;
-  border-left: 1px solid $white;
-  border-top: 1px solid $white;
-  box-shadow: 10px 10px 60px -8px rgba(0,0,0,0.2);
-  position: absolute;
-  transition: all 0.2s ease;
-
-  &-1 {
-    height: 80px;
-    width: 80px;
-    top: -20px;
-    left: -40px;
-    z-index: -1;
-  }
-
-  &-2 {
-    height: 80px;
-    width: 80px;
-    bottom: -30px;
-    right: -10px;
-  }
-
-  &-3 {
-    height: 100px;
-    width: 100px;
-    bottom: 120px;
-    right: -50px;
-    z-index: -1;
-  }
-
-  &-4 {
-    height: 120px;
-    width: 120px;
-    top: -60px;
-    right: -60px;
-  }
-
-  &-5 {
-    height: 60px;
-    width: 60px;
-    bottom: 170px;
-    left: 90px;
-    z-index: -1;
-  }
-}
-
-a,
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-    outline: none;
 }
