--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -18,7 +18,7 @@
       <p> <strong> Plastic bottles: </strong> <%= @offer.plastic_bottles %> </p>
       <p> <strong> Glass bottles: </strong> <%= @offer.glass_bottles %> </p>
       <p> <strong> Bottle crates: </strong> <%= @offer.crates %> </p>
-      <p> <strong> Tip: </strong> <%= @offer.tip %> </p>
+      <p> <strong> Tip: </strong> €<%= @offer.tip %> </p>
       <p> <strong> Comment: </strong> <%= @offer.comment %> </p>
   </div>
 
