added search bar

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -5,7 +5,7 @@ $white: rgba(255,255,255,0.3);
   font-family: 'Montserrat', sans-serif;
 }
 
-form {
+#new_offer {
   display: flex;
   justify-content: center;
   background: $white;
