--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<%# <% if @user. %>
-<%# <h1>Welcome, <%= current_user.first_name %>!</h1> %> %>
+<div class="body-homepage">
+  <h1>PfandMe</h1>
+  <h5>Get those pesky bottles out of your flat or office!</h5>
+  <form action="" class="form-page">
+    <input type="search" id="searchfield" required >
+    <i class="fa fa-search"></i>
+  </form>
+</div>
