--- a/app/views/pages/pfander_dashboard.html.erb
+++ b/app/views/pages/pfander_dashboard.html.erb
@@ -1,16 +1,15 @@
 <div>
-<% if current_user.bookings.any? %>
-  <% current_user.bookings.each do |booking| %>
-    <% if booking.status == "pending" %>
-      <h1>Pending Bookings</h1>
-      <p>You have not accepted any offers!</p>
-    <% else %>
-      <h1>Your Bookings</h1>
-      <p><%= booking.offer.user.first_name %></p>
-      <p><%= booking.offer.user.last_name %></p>
-      <p><%= booking.offer.user.address %></p>
-      <p><%= booking.offer.timeslot %></p>
+  <h1>Your Bookings</h1>
+  <% if current_user.bookings.any? %>
+  <%# <% raise %>
+    <% current_user.bookings.each do |booking| %>
+      <% if booking.status == "accepted" %>
+        <p><%= booking.status %></p>
+        <p><%= booking.offer.user.first_name %></p>
+        <p><%= booking.offer.user.last_name %></p>
+        <p><%= booking.offer.user.address %></p>
+        <p><%= booking.offer.timeslot %></p>
+      <% end %>
     <% end %>
   <% end %>
-<% end %>
 </div>
