--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,9 @@
   <h1>PfandMe</h1>
   <% if current_user && current_user.donor %>
     <h5>Get those pesky bottles out of your flat or office!</h5>
+    <div class="flex-dark">
+      <a class="bttn-dark" <%= link_to "Create Offer", new_offer_path %>></a>
+  </div>
   <% else %>
     <form action="" class="form-page">
       <input type="search" id="searchfield" placeholder='Enter address' required>
