--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container mt-5">
-<button type="button" class="btn btn-success mb-4"> <%= link_to "Create a new offer", offer_path(:new) %></button>
+<%# <button type="button" class="btn btn-success mb-4"> <%= link_to "Create a new offer", offer_path(:new) %></button> %>
 
 <h3>Here are all active offers</h3>
   <% @offers.each do |offer| %>
@@ -9,11 +9,11 @@
         <li>
           <p> <strong> Donor name: </strong> <%= offer.user.first_name %> </p>
           <p> <strong> Pickup address: </strong> <%= offer.user.address %> </p>
-          <p> <strong> Pickup time:  </strong> <%= offer.timeslot %></p>
-          <p> <strong> Pickup time:  </strong> <%= offer.plastic_bottles %></p>
-          <p> <strong> Pickup time:  </strong> <%= offer.glass_bottles %></p>
-          <p> <strong> Pickup time:  </strong> <%= offer.crates %></p>
-          <p> <strong> Pickup time:  </strong> <%= offer.tip %></p>
+          <p> <strong> Timeslot:  </strong> <%= offer.timeslot %></p>
+          <p> <strong> Plastic bottles qty:  </strong> <%= offer.plastic_bottles %></p>
+          <p> <strong> Glass bottles qty:  </strong> <%= offer.glass_bottles %></p>
+          <p> <strong> Crates qty:  </strong> <%= offer.crates %></p>
+          <p> <strong> Tip:  </strong> <%= offer.tip %></p>
           <%=
           link_to "Accept", offer_bookings_path(offer), method: :post, class: "btn btn-primary", data: { controller: :sweetalert, action: "sweetalert#fire", sweetalert_pending_value: true} %>
           <br>
