fixed link to offers

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container mt-5">
-<%# <button type="button" class="btn btn-success mb-4"> <%= link_to "Create a new offer", offer_path(:new) %></button> %>
+<%# <button type="button" class="btn btn-success mb-4"> <%= link_to "Create a new offer", offer_path(:new)</button> %>
 
 <h3>Here are all active offers</h3>
   <% @offers.each do |offer| %>
