--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <% if current_user && current_user.donor %>
     <h5>Get those pesky bottles out of your flat or office!</h5>
     <div class="flex-dark">
-      <a class="bttn-dark"><%= link_to "Create Offer", new_offer_path %></a>
+      <a class="bttn-dark"<%= link_to "Create Offer", new_offer_path %>></a>
   </div>
   <% else %>
     <form action="" class="form-page">
