--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,11 +1,12 @@
+<div class="container background-color">
+<div class="title">
+<h3 class="pt-3">Here are all active offers</h3>
+</div>
+<ul>
 
-<div class="container mt-5">
-<%# <button type="button" class="btn btn-success mb-4"> <%= link_to "Create a new offer", offer_path(:new) %></button> %>
-
-<h3>Here are all active offers</h3>
   <% @offers.each do |offer| %>
-    <div>
-      <ul>
+    <div class="card">
+
         <li>
           <p> <strong> Donor name: </strong> <%= offer.user.first_name %> </p>
           <p> <strong> Pickup address: </strong> <%= offer.user.address %> </p>
@@ -15,9 +16,10 @@
           <p> <strong> Crates qty:  </strong> <%= offer.crates %></p>
           <p> <strong> Tip:  </strong> <%= offer.tip %></p>
           <%=
-          link_to "Accept", offer_bookings_path(offer), method: :post, class: "btn btn-primary", data: { controller: :sweetalert, action: "sweetalert#fire", sweetalert_pending_value: true} %>
+          link_to "Accept", offer_bookings_path(offer), method: :post, class: "btn btn-primary accept-btn", data: { controller: :sweetalert, action: "sweetalert#fire", sweetalert_pending_value: true} %>
           <br>
         </li>
     </div>
-  </ul>
-<% end %>
+  <% end %>
+
+</ul>
