--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,18 +9,6 @@ $third:#4426a8;
   align-items: center;
 }
 
-a.bttn-dark {
-  color:$second;
-  text-decoration:none;
-  -webkit-transition:0.3s all ease;
-  transition:0.3s ease all;
-  &:hover {
-    color:#FFF;
-  }
-  &:focus {
-    color:#FFF;
-  }
-}
 
 .bttn-dark {
   font-size:18px;
@@ -37,6 +25,10 @@ a.bttn-dark {
   position:relative;
   box-shadow: 0 2px 10px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.1);
   z-index:2;
+  color:$second;
+  text-decoration:none;
+  -webkit-transition:0.3s all ease;
+  transition:0.3s ease all;
   &:before {
     -webkit-transition:0.5s all ease;
     transition:0.5s all ease;
@@ -51,6 +43,7 @@ a.bttn-dark {
     z-index:-1;
   }
   &:hover {
+    color:#FFF;
     &:before {
       -webkit-transition:0.5s all ease;
       transition:0.5s all ease;
@@ -60,6 +53,7 @@ a.bttn-dark {
     }
   }
   &:focus {
+    color:#FFF;
     &:before {
       -webkit-transition:0.5s all ease;
       transition:0.5s all ease;
@@ -68,4 +62,7 @@ a.bttn-dark {
       opacity:1;
     }
   }
+}
+a:hover {
+  text-decoration: none;
 }
