--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -1,8 +1,9 @@
 .body-homepage {
     background-image: url("https://images.unsplash.com/photo-1563089145-599997674d42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cHVycGxlJTIwYWJzdHJhY3R8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60");
+    background-size: cover;
     padding: 0;
     margin: 0;
-    height: 100vh;
+    height: 94vh;
     width: 100%;
 }
 
