--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
 	<ul>
 		<li>Dashboard</li>
 		<li>History</li>
-		<li>Logout</li>
+		<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 		<div class="focus-el el--1"></div>
 		<div class="focus-el el--2"></div>
 	</ul>
