--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -2,6 +2,14 @@
 <div class="title">
 <h3 class="pt-3">Here are all active offers</h3>
 </div>
+<%# geocoding - adding array of markers %>
+<div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+></div>
+
 <ul>
   <% @offers.each do |offer| %>
     <div class="card">
