worked on the buttons a bit

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -54,11 +54,6 @@ ul {
   padding: 0;
 }
 
-.accept-btn {
-  width: 100%;
-  border-radius: 4px;
-  background-color: rgb(103, 40, 103);
-}
 
 // .accept-btn:hover {
 //   transform: scale(0.9, 0.9);
@@ -72,5 +67,8 @@ ul {
 }
 
 .background-color {
-  background-color: rgb(253, 219, 244);
+  background-color: rgba(147, 69, 208, 0.3);;
 }
+
+
+.card-
