--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -66,3 +66,58 @@ $third:#4426a8;
 a:hover {
   text-decoration: none;
 }
+
+
+.btn-purple {
+  background-color: $dark-purple;
+  border: 4px solid #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  font-family: $body-font;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 22px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 8px 80px;
+  color: white;
+  width: 100%;
+}
+
+.accept-btn {
+background-color: $dark-purple;
+  border: 4px solid #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  font-family: $body-font;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 22px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 8px 110px;
+  color: white;
+  width: 100%;
+}
+
+.submit-btn {
+  background-color: $dark-purple;
+  border: 4px solid #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  font-family: $body-font;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 22px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding: 8px 85px;
+  color: white;
+  width: 100%;
+}
