--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -1,11 +1,11 @@
 <%= simple_form_for offer do |f|  %>
     <div class="form">
-      <%= f.input :timeslot, collection: Offer::TIMESLOT, prompt: "Choose a timeslot:", input_html: { class: 'special'}, label: false %>
-      <%= f.input :plastic_bottles, collection: Offer::PLASTICBOTTLES, prompt: "Amount of plastic bottles:", input_html: { class: 'special' }, label: false  %>
-      <%= f.input :glass_bottles, collection: Offer::GLASSBOTTLES, prompt: "Amount of glass bottles:", input_html: { class: 'special' }, label: false  %>
-      <%= f.input :crates, collection: Offer::CRATES, prompt: "Amount of crates:", input_html: { class: 'special' }, label: false  %>
-      <%= f.input :tip, collection: Offer::TIP, prompt: "Add a tip: €", label: 'Sponsor your Pfanders with a tip:', input_html: { class: 'special' }, label: false  %>
+      <%= f.input :timeslot, collection: Offer::TIMESLOT, prompt: "Timeslot:", input_html: { class: 'special'}, label: false %>
+      <%= f.input :plastic_bottles, collection: Offer::PLASTICBOTTLES, prompt: "Plastic bottles:", input_html: { class: 'special' }, label: false  %>
+      <%= f.input :glass_bottles, collection: Offer::GLASSBOTTLES, prompt: "Glass bottles:", input_html: { class: 'special' }, label: false  %>
+      <%= f.input :crates, collection: Offer::CRATES, prompt: "Crates:", input_html: { class: 'special' }, label: false  %>
+      <%= f.input :tip, collection: Offer::TIP, prompt: "Tip: €", label: 'Sponsor your Pfanders with a tip:', input_html: { class: 'special' }, label: false  %>
       <%= f.input :comment, label: 'Anything you would like to share with us? Add a comment:', input_html: { class: 'last' }%>
-      <%= f.button :submit, id: "button" %>
+      <%= f.button :submit, value: "Submit", class: "btn submit-btn" %>
     </div>
 <% end %>
