--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,25 @@
 <div class="body-homepage">
-  <h1>PfandMe</h1>
-  <% if current_user && current_user.donor %>
-    <h5>Get those pesky bottles out of your flat or office!</h5>
-    <div class="flex-dark">
-    <%= link_to new_offer_path do %>
-      <div class="bttn-dark" >Create Offer</div>
-      <% end %>
-  
+  <div class="container">
+    <div class="homepage-content">
+      <h1>PfandMe</h1>
+        <div class="homepage-slogan">
+          <% if current_user && current_user.donor %>
+            <h5>Get those pesky bottles out of your flat or office!</h5>
+        </div>
+            <div class="flex-dark">
+            <%= link_to new_offer_path do %>
+              <div class="btn btn-purple" >Create offer</div>
+              <% end %>
+
+          </div>
+          <% else %>
+            <form action="" class="form-page">
+              <input type="search" id="searchfield" placeholder='Enter address' required>
+              <%= link_to offers_path do %>
+                <i class="fa fa-search"></i>
+              <% end %>
+            </form>
+          <% end %>
+    </div>
   </div>
-  <% else %>
-    <form action="" class="form-page">
-      <input type="search" id="searchfield" placeholder='Enter address' required>
-      <%= link_to offers_path do %>
-        <i class="fa fa-search"></i>
-      <% end %>
-    </form>
-  <% end %>
 </div>
