--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,4 @@
-.card {
+.card-offers {
   margin: 30px auto;
   border-radius: 40px;
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
@@ -71,4 +71,6 @@ ul {
 }
 
 
-.card-
+.card-white-purple {
+  
+}
