--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -21,16 +21,16 @@
 
 <ul>
   <% @offers.each do |offer| %>
-    <div class="card">
+    <div class="card-offers">
 
         <li>
           <p> <strong> Donor name: </strong> <%= offer.user.first_name %> </p>
           <p> <strong> Pickup address: </strong> <%= offer.user.address %> </p>
           <p> <strong> Timeslot:  </strong> <%= offer.timeslot %></p>
           <p> <strong> Plastic bottles qty:  </strong> <%= offer.plastic_bottles %></p>
-          <p> <strong> Glass bottles qty:  </strong> <%= offer.glass_bottles %></p>
-          <p> <strong> Crates qty:  </strong> <%= offer.crates %></p>
-          <p> <strong> Tip:  </strong> <%= offer.tip %></p>
+          <p> <strong> Glass bottles:  </strong> <%= offer.glass_bottles %></p>
+          <p> <strong> Crates:  </strong> <%= offer.crates %></p>
+          <p> <strong> Tip: € </strong> <%= offer.tip %></p>
           <%=
           link_to "Accept", offer_bookings_path(offer), method: :post, class: "btn accept-btn", data: { controller: :sweetalert, action: "sweetalert#fire", sweetalert_pending_value: true} %>
           <br>
