Fixed the CSS of Pfander Dashboard

--- a/app/views/offers/_show.html.erb
+++ b/app/views/offers/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
 <% if @last_offer.user == current_user %>
   <h3>This is <strong>your</strong> offer listing! Here are the details:</h3>
 <% else %>
