--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -74,3 +74,9 @@ ul {
 .background-color {
   background-color: rgb(253, 219, 244);
 }
+
+.card-text {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  margin-left: 40px;
+}
