--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,10 @@
 <div id="app">
 	<ul>
-		<li>Dashboard</li>
-		<li>History</li>
-		<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-		<div class="focus-el el--1"></div>
-		<div class="focus-el el--2"></div>
+		<li><i class="fas fa-home"></i></li>
+		<li><i class="fas fa-history"></i></li>
+		<li><%= link_to destroy_user_session_path, method: :delete do %>
+      <i class="fas fa-sign-out-alt"></i>
+    </li>
+    <% end %>
 	</ul>
 </div>
