--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,17 +3,15 @@
   <% if current_user && current_user.donor %>
     <h5>Get those pesky bottles out of your flat or office!</h5>
     <div class="flex-dark">
-    <%= link_to new_offer_path do %>
-      <div class="bttn-dark" >Create Offer</div>
+      <%= link_to new_offer_path do %>
+        <div class="bttn-dark">Create Offer</div>
       <% end %>
-  
-  </div>
+    </div>
   <% else %>
-    <form action="" class="form-page">
-      <input type="search" id="searchfield" placeholder='Enter address' required>
+    <div class="flex-dark">
       <%= link_to offers_path do %>
-        <i class="fa fa-search"></i>
+        <div class="bttn-dark">Look for offers</div>
       <% end %>
-    </form>
+    </div>
   <% end %>
 </div>
