--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,17 +10,16 @@
 
 .title {
   text-align: center;
-  // background-color: rgb(245, 211, 245);
 }
 
 .background-color {
-  background-color: rgba(147, 69, 208, 0.3);;
+  background-color: rgba(147, 69, 208, 0.3);
 }
 
 
-.card-white-purple {
-  
-}
+
+
+// }
 
 // .card-product {
 //   overflow: hidden;
@@ -67,7 +66,7 @@
 //   list-style-type: none;
 //   margin: 0;
 //   padding: 0;
-}
+// }
 
 
 // .accept-btn:hover {
