--- a/app/views/pages/donor_dashboard.html.erb
+++ b/app/views/pages/donor_dashboard.html.erb
@@ -1,4 +1,5 @@
 <div id="body-form">
+<h1>Your Pfander</h1>
   <div class="container">
     <ul>
       <% if @last_offer.present? %>
@@ -7,8 +8,15 @@
             <% if booking.status == "accepted" %>
             <div class="card">
               <li>
-                <%= booking.user.story %>
-                <%= booking.user.first_name %>
+                <% if @last_offer.user.photo.attached? %>
+                  <%= cl_image_tag @last_offer.user.photo.key, class:"avatar-large", height: 80, width: 80, crop: :fill %>
+                <% else %>
+                  <p>No image found</p>
+                <% end %>
+                <p><strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
+                <p><%= booking.user.story %></p>
+                <p><strong>Pickup Time:</strong> <%= booking.offer.timeslot %></p>
+
               <% end %>
             <% end %>
           <% else %>
