--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container background-color">
+<div class="container background-color-light">
 <div class="title">
 <div class="offers-title">
   <h3>Here are all active offers</h3>
@@ -16,7 +16,8 @@
 <div
   id="map"
   style="width: 100%;
-  height: 600px;"
+  height: 600px;
+  border-radius: 15px;"
   data-markers="<%= @markers.to_json %>"
 ></div>
 
