--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <div id="app">
-	<ul>
-		<li><i class="fas fa-home"></i></li>
-		<li><i class="fas fa-history"></i></li>
-		<li><%= link_to destroy_user_session_path, method: :delete do %>
+	<ul class="list-footer">
+		<li class="home"><i class="fas fa-home"></i></li>
+		<li class="history"><i class="fas fa-history"></i></li>
+		<li class="logout"><%= link_to destroy_user_session_path, method: :delete do %>
       <i class="fas fa-sign-out-alt"></i>
     </li>
     <% end %>
