--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -20,16 +20,19 @@
   data-markers="<%= @markers.to_json %>"
 ></div>
 
-
-  <% @offers.each do |offer| %>
-    <div class="card-offers">
-          <p> <strong> Donor name: </strong> <%= offer.user.first_name %> </p>
-          <p> <strong> Pickup address: </strong> <%= offer.user.address %> </p>
-          <p> <strong> Timeslot:  </strong> <%= offer.timeslot %></p>
-          <p> <strong> Plastic bottles:  </strong> <%= offer.plastic_bottles %></p>
-          <p> <strong> Glass bottles:  </strong> <%= offer.glass_bottles %></p>
-          <p> <strong> Crates:  </strong> <%= offer.crates %></p>
-          <p> <strong> Tip: </strong>€  <%= offer.tip %></p>
-          <%= link_to "Accept", offer_bookings_path(offer), method: :post, class: "btn accept-btn", data: { controller: :sweetalert, action: "sweetalert#fire", sweetalert_pending_value: true} %>
-    </div>
+  <% offers = @offers.sort_by {|offer| offer.created_at} %>
+  <% offers.each do |offer| %>
+    <% if offer.booking == nil %>
+      <div class="card-offers">
+            <p> <strong> Donor name: </strong> <%= offer.user.first_name %> </p>
+            <p> <strong> Pickup address: </strong> <%= offer.user.address %> </p>
+            <p> <strong> Timeslot:  </strong> <%= offer.timeslot %></p>
+            <p> <strong> Plastic bottles:  </strong> <%= offer.plastic_bottles %></p>
+            <p> <strong> Glass bottles:  </strong> <%= offer.glass_bottles %></p>
+            <p> <strong> Crates:  </strong> <%= offer.crates %></p>
+            <p> <strong> Tip: </strong>€  <%= offer.tip %></p>
+            <p> <strong> Comment: </strong>  <%= offer.comment %></p>
+            <%= link_to "Accept", offer_bookings_path(offer), method: :post, class: "btn accept-btn", data: { controller: :sweetalert, action: "sweetalert#fire", sweetalert_pending_value: true} %>
+      </div>
+    <% end %>
   <% end %>
