--- a/app/views/pages/donor_dashboard.html.erb
+++ b/app/views/pages/donor_dashboard.html.erb
@@ -2,31 +2,24 @@
 <div id="body-form">
 <h1>Your Pfander</h1>
   <div class="container">
-    <ul>
-      <% if @last_offer.present? %>
-        <% if @last_offer.bookings.any? %>
-          <% @last_offer.bookings.each do |booking| %>
-            <% if booking.status == "accepted" %>
-            <div class="card">
-              <li>
-                <% if @last_offer.user.photo.attached? %>
-                  <%= cl_image_tag @last_offer.user.photo.key, class:"avatar-large", height: 80, width: 80, crop: :fill %>
-                <% else %>
-                  <p>No image found</p>
-                <% end %>
-                <p><strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
-                <p><%= booking.user.story %></p>
-                <p><strong>Pickup Time:</strong> <%= booking.offer.timeslot %></p>
-
-              <% end %>
+    <% booking = @last_offer.booking %>
+      <% if @last_offer.booking.present? %>
+          <% if @last_offer.booking.status == "accepted" %>
+          <div class="card-offers">
+            <% if @last_offer.user.photo.attached? %>
+              <%= cl_image_tag @last_offer.user.photo.key, class:"avatar-large", height: 80, width: 80, crop: :fill %>
+            <% else %>
+              <p>No image found</p>
             <% end %>
-          <% else %>
-            <%= render "offers/show" %>
-          <% end %>
-          <% end %>
-        </li>
-      </div>
-    </ul>
+              <p><strong><%= booking.offer.user.first_name %> <%= booking.offer.user.last_name %></strong></p>
+              <p><%= booking.offer.user.story %></p>
+              <p><strong>Pickup Time:</strong> <%= booking.offer.timeslot %></p>
+            <% end %>
+        <% else %>
+          <%= render "offers/show" %>
+          <%= render 'shared/footer' %>
+        <% end %>
+    </div>
   </div>
+  <%= render 'shared/footer' %>
 </div>
-<%= render 'shared/footer' %>
