Got the sticky footer

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,6 +18,7 @@
 
 .background-color-light {
   background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
+  background-size: 100%;
 }
 
 
