--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div id="app">
+<div id="app" class="fixed-bottom">
 	<ul class="list-footer">
 		<li class="home"><i class="fas fa-home"></i></li>
 		<li class="history"><i class="fas fa-history"></i></li>
