--- a/app/views/pages/donor_dashboard.html.erb
+++ b/app/views/pages/donor_dashboard.html.erb
@@ -1,18 +1,19 @@
 
 <div class = "container background-color-light">
-<h1>Your Pfander</h1>
+
   <div class="container">
     <% booking = @last_offer.booking %>
       <% if @last_offer.booking.present? %>
         <% if @last_offer.booking.status == "accepted" %>
+        <h1>Your Pfander</h1>
           <div class="card-offers">
             <% if @last_offer.user.photo.attached? %>
               <%= cl_image_tag @last_offer.user.photo.key, class:"avatar-large", height: 80, width: 80, crop: :fill %>
             <% else %>
               <p>No image found</p>
             <% end %>
-              <p><strong><%= booking.offer.user.first_name %> <%= booking.offer.user.last_name %></strong></p>
-              <p><%= booking.offer.user.story %></p>
+              <p><strong><%= booking.user.first_name %> <%= booking.user.last_name %></strong></p>
+              <p><%= booking.user.story %></p>
               <p><strong>Pickup Time:</strong> <%= booking.offer.timeslot %></p>
             <% end %>
         <% else %>
