The Dashboard is working nice

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,7 +18,12 @@
 
 .background-color-light {
   background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
-  background-size: 100%;
+}
+
+
+.background-color-light-box {
+  background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
+  height: 100vh;
 }
 
 
@@ -91,4 +96,8 @@
   margin-top: 0;
   margin-bottom: 1rem;
   margin-left: 40px;
+}
+
+#name-title {
+  font-size: 30px;
 }
