--- a/app/views/offers/_show.html.erb
+++ b/app/views/offers/_show.html.erb
@@ -24,7 +24,7 @@
         </div>
         <br>
         <div class = "flex-dark">
-          <button type="button" class="btn accept-btn"><%= link_to "Back", offers_path %></button>
+          <button type="button" class="btn accept-btn"><%= link_to "Edit", edit_offer_path(@last_offer) %></button>
         </div>
       </div>
 </div>
