--- a/app/views/offers/edit.html.erb
+++ b/app/views/offers/edit.html.erb
@@ -1,4 +1,5 @@
-
-<div class="container">
-  <%= render 'form', offer: @offer %>
+<div id="body-form">
+  <div class="container" style="padding-top: 30px; padding-bottom: 30px;">
+    <%= render 'form', offer: @offer %>
+  </div>
 </div>
