--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -6,10 +6,8 @@
 </div>
 <%# search bar %>
 <form action="" class="form-page">
-      <input type="search" id="searchfield" placeholder='Enter address' required data-behavior="autocomplete">
-      <%= link_to offers_path do %>
-        <i class="fa fa-search"></i>
-      <% end %>
+    <input type="search" id="searchfield" placeholder='Enter address' required data-behavior="autocomplete">
+    <input type="button" class="fa fa-search" action="submit" />
 </form>
 
 <%# geocoding - adding array of markers %>
@@ -29,7 +27,15 @@
             <p><i class="fas fa-user-circle"></i>  &nbsp;  <%= offer.user.first_name %></p>
             <p><i class="fas fa-map-marked-alt"></i>  &nbsp;  <%= offer.user.address %> </p>
             <p> <i class="fas fa-clock"></i>  &nbsp; <%= offer.timeslot %></p>
-            <p> <strong> Plastic <i class="fas fa-wine-bottle"></i>  &nbsp;   </strong> <%= offer.plastic_bottles %></p>
+
+            <p> <strong> Plastic <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bottle" width="33" height="33" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+            <path d="M10 5h4v-2a1 1 0 0 0 -1 -1h-2a1 1 0 0 0 -1 1v2z" />
+            <path d="M14 3.5c0 1.626 .507 3.212 1.45 4.537l.05 .07a8.093 8.093 0 0 1 1.5 4.694v6.199a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2v-6.2c0 -1.682 .524 -3.322 1.5 -4.693l.05 -.07a7.823 7.823 0 0 0 1.45 -4.537" />
+            <path d="M7.003 14.803a2.4 2.4 0 0 0 .997 -.803a2.4 2.4 0 0 1 2 -1a2.4 2.4 0 0 1 2 1a2.4 2.4 0 0 0 2 1a2.4 2.4 0 0 0 2 -1a2.4 2.4 0 0 1 1 -.805" />
+          </svg>  &nbsp;   </strong> <%= offer.plastic_bottles %></p>
+
+
             <p> <strong> Glass <i class="fas fa-wine-bottle"></i>   &nbsp;  </strong> <%= offer.glass_bottles %></p>
             <p> <i class="fas fa-box"></i>  &nbsp;  <%= offer.crates %></p>
             <p> <i class="fas fa-hand-holding-usd"> </i>  &nbsp; <i class="fas fa-euro-sign"></i><%= offer.tip %></p>
