favicon and tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PfandMe</title>
+    <%= favicon_link_tag asset_path('pfandmelogo.ico') %>
+    <title>PfandMe - Get those pesky bottles out of your flat or office!</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
