Added History to Donor and Pfander

--- a/app/views/pages/donor_dashboard.html.erb
+++ b/app/views/pages/donor_dashboard.html.erb
@@ -1,5 +1,5 @@
 
-<div class = "container background-color-light-box">
+<div class = "background-color-light-box">
     <% booking = @last_offer.booking %>
       <% if @last_offer.booking.present? %>
         <% if @last_offer.booking.status == "accepted" %>
