--- a/app/views/pages/pfander_dashboard.html.erb
+++ b/app/views/pages/pfander_dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="container background-color-light-box">
+<div class="background-color-light-box">
   <h1>Your Bookings</h1>
     <% if current_user.bookings.any? %>
       <% current_user.bookings.each do |booking| %>
