--- a/app/views/offers/_show.html.erb
+++ b/app/views/offers/_show.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
-    <div class="card-offers">
+<h1>Your Dashboard</h1>
+    <div class="card-offers mt-0">
       <% if @last_offer.user == current_user %>
         <h3><strong>Your order is still pending</strong></h3>
       <% else %>
