--- a/app/views/offers/_show.html.erb
+++ b/app/views/offers/_show.html.erb
@@ -1,6 +1,6 @@
-<% content_for :meta_title, "#{@offer.glass_bottles} + #{@offer.plastic_bottles} is on #{DEFAULT_META["meta_product_name"]}" %>
-<% content_for :meta_description, @offer.comment %>
-<% content_for :meta_image, cl_image_path(@offer.user.photo) %>
+<% content_for :meta_title, "#{@last_offer.glass_bottles} + #{@last_offer.plastic_bottles} is on #{DEFAULT_META["meta_product_name"]}" %>
+<% content_for :meta_description, @last_offer.comment %>
+<% content_for :meta_image, cl_image_path(@last_offer.user.photo) %>
 
 <div class="container">
 <h1>Your Dashboard</h1>
