Working on history

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -26,6 +26,10 @@
   height: 100vh;
 }
 
+#background-color-light-box-history {
+  background: linear-gradient(91deg, rgba(223, 42, 78, 0.5), rgba(63, 94, 251, 0.5));
+}
+
 
 // }
 
