--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,6 +18,7 @@
   </div>
 
   <h1>PfandMe</h1>
+  <div class="spacer">&nbsp;</div>
   <% if current_user && current_user.donor %>
   <h5>Get those pesky bottles out of your flat or office!</h5>
     <div class="flex-dark">
